--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -57,9 +57,7 @@
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
         android:layout_marginStart="123dp"
-        android:layout_marginEnd="105dp"
         android:layout_marginBottom="78dp"
-        android:text="New Pup"
-        app:backgroundTint="#AE003B" />
+        android:text="New Pup"/>
 
 </RelativeLayout>
